--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@thirdweb-dev/chains": "^0",
     "@thirdweb-dev/react": "^3.16.5",
     "@thirdweb-dev/sdk": "^3",
+    "@types/mongoose": "^5.11.97",
+    "axios": "^1.6.5",
     "ethers": "^5.7.2",
+    "mongoose": "^8.0.4",
     "next": "^13",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2",
