--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 secretKey = v_VnECP2l7RuD4aB2OYQxIb3nhHc2RdxKlXh6VOGwRm1a_RXtbuVrU08wgBG2nmANZ8aE5BINsk0yq6qnjGV3w
 clientId = f268fc3c482cf7c2d34decae0cc9e2e6
-NEXT_PUBLIC_TEMPLATE_CLIENT_ID = "f268fc3c482cf7c2d34decae0cc9e2e6"
-TW_SECRET_KEY=IFQUHf9i_qI8_Uv2Ndebg7lpmap16ptQnoaiVpeO5Vv861pKmWOesypcDOu1Xn8_DaSoGI0QYuy1TNp0Li3r3A
-NEXT_PUBLIC_BICONOMY_APIID = "30c4b95f-8a1c-4c78-bb2a-945a6b132285"
-NEXT_PUBLIC_BICONOMY_APIKEY = "vAALwwgpz.03e4b3cc-58bb-4203-85e7-6784320c62b2"
+NEXT_PUBLIC_TEMPLATE_CLIENT_ID ="f268fc3c482cf7c2d34decae0cc9e2e6"
+TW_SECRET_KEY="v_VnECP2l7RuD4aB2OYQxIb3nhHc2RdxKlXh6VOGwRm1a_RXtbuVrU08wgBG2nmANZ8aE5BINsk0yq6qnjGV3w"
+NEXT_PUBLIC_BICONOMY_APIID ="30c4b95f-8a1c-4c78-bb2a-945a6b132285"
+NEXT_PUBLIC_BICONOMY_APIKEY ="vAALwwgpz.03e4b3cc-58bb-4203-85e7-6784320c62b2"
 NEXT_PUBLIC_MONGODB="mongodb+srv://dbUser:kxRaPtdcsEPycRqW@cluster0.vqzzkhh.mongodb.net/zura-mail"
